src/scss/base/_base.scss
* {
	margin: 0;
	padding: 0;
}

*,
*::before,
*::after {
	box-sizing: inherit;
}

button {
	background: none;
	border: none;
	outline: none;
	cursor: pointer;
}

a {
	text-decoration: none;
	color: inherit;
}

ul {
	list-style-type: none;
}

img {
	max-width: 100%;
	display: block;
}

table {
	width: 100%;
	border-collapse: collapse;
}

html,
body {
	position: relative;
	min-height: 100% !important;
	height: 100%;
}

// body {
//   max-width: 1440px;
//   width: 100%;
//   margin-inline: auto;
// }

// .wrapper,
// .main {
//   height: 100%;
// }

a {
	text-decoration: none;
	color: inherit;
}

html {
	font-size: 62.5%;

	@include respond(tab-land) {
		font-size: 56.25%;
	}

	@include respond(tab-port) {
		font-size: 50%;
	}

	@include respond(big-desktop) {
		font-size: 75%;
	}
}

body {
	box-sizing: border-box;
}

